--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,8 @@ dependencies {
     compile 'com.android.support:design:25.0.0'
     compile 'com.squareup.okhttp3:mockwebserver:3.4.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'tv.danmaku.ijk.media:ijkplayer-java:0.7.7.1'
+    compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.7.7.1'
+    compile 'q.rorbin:badgeview:1.0.5'
     testCompile 'junit:junit:4.12'
 }
